# zero-to-hero

./: .env.example  .gitattributes  .gitignore  README.md  justfile  mise.toml  package.json  progress.md  zero-to-hero.code-workspace
contracts/: foundry.toml
docs/: phase-0-checklist.md
docs/base/_guide/: phase-0-monorepo.md  phase-1-data-hunter.md
docs/plan/2026-07-10/phase-0-monorepo/: AGENTS.md  abstract.md  impl.md  progress.md  review-findings-round-1-overview-reviewer-1.md  review-findings-round-1-overview-reviewer-2.md  review-findings-round-1-overview-reviewer-3.md  review-findings-round-2-overview-reviewer-1.md  review-findings-round-2-overview-reviewer-2.md  review-findings-round-2-overview-reviewer-3.md  review-packet-1.md  review-packet-2.md  spec-review-r1.md  spec-review-r2.md  spec.md
py/: pyproject.toml
rust/: Cargo.toml
rust/crates/strategy-core/: Cargo.toml
rust/crates/strategy-core/src/: lib.rs
scripts/: setup.sh
scripts/cli/: app.ts  lib.ts  main.ts  tasks.ts
scripts/cli/commands/: check.ts  fmt.ts  lint.ts  typecheck.ts
