[project]
name = "zero-to-hero-py"
version = "0.1.0"
description = "Python workspace for zero-to-hero quant stack"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/data",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["packages"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "UP", "C4", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["packages"]
exclude = ["**/__pycache__", "**/.venv", "notebooks"]
pythonVersion = "3.14"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
